--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "homepage": "https://github.com/nasemul1/pcist-backend#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.6.0",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
     "slugify": "^1.6.6",
