--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/nasemul1/pcist-backend#readme",
   "dependencies": {
+    "agenda": "^5.0.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
     "slugify": "^1.6.6",
