--- a/.github/workflows/deploy-cpanel.yml
+++ b/.github/workflows/deploy-cpanel.yml
@@ -17,8 +17,8 @@ jobs:
       - name: 🚚 FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ secrets.FTP_HOST }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
+          server: ftp.tripstins.com #${{ secrets.FTP_HOST }}
+          username: sadimahmud225@pcist.tripstins.com #${{ secrets.FTP_USERNAME }}
+          password: sadimahmud338@gmail # ${{ secrets.FTP_PASSWORD }}
           server-dir: /pcist.tripstins.com/
           port: 21
