--- a/.github/workflows/deploy-cpanel.yml
+++ b/.github/workflows/deploy-cpanel.yml
@@ -20,5 +20,6 @@ jobs:
           server: ftp.tripstins.com #${{ secrets.FTP_HOST }}
           username: sadimahmud225@pcist.tripstins.com #${{ secrets.FTP_USERNAME }}
           password: sadimahmud338@gmail # ${{ secrets.FTP_PASSWORD }}
-          server-dir: /pcist.tripstins.com/
+          server-dir: /pcist.tripstins.com/sadimahmud225/
           port: 21
+          protocol: ftps
