--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
+    "sharp": "^0.34.3",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
