--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.15.1",
     "puppeteer": "^24.17.0",
     "sharp": "^0.34.3",
