--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "zod": "^4.1.13"
   }
 }
